updated shoe inventory and added my portfolio to contact

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             <li><p id="Home" href="">Collections</p></li>
             <li><p id="Add-Shoes">Edit Shoes</p></li>
             <li><p href="">About</p></li>
-            <li><p href="">Contact</p></li>
+            <li><p id="contact">Contact</p></li>
           </ul>
         </div>
         <div id="search-box">
