changed background to video and fixed border on filterbox

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,9 @@
       <hr id="line">
       <section>
         <h1 id="site-message">50% off Today Only!</h1>
-        <img src="images/Hero picture.jpg" id="heroImg">
+        <video autoplay muted playsinline id="heroImg">
+          <source src="video/skateboard_hero.mp4" style="width: 100%;"type="video/mp4">
+        </video>
       </section>
       <article>
        
